feat(integration): face detection integration
